--- a/src/app/modules/promo-form/scss/_common-style.scss
+++ b/src/app/modules/promo-form/scss/_common-style.scss
@@ -69,7 +69,7 @@ mat-form-field.full-width {
     align-content: start;
 
     @media only screen and (max-width: $screen-sm) {
-      padding: 0.5rem 1.3rem 0.5rem 1.3rem;
+      padding: 0.5rem 1.8rem 0.5rem 1.3rem;
       border: initial;
     }
 
